--- a/index.html
+++ b/index.html
@@ -193,17 +193,9 @@
     </header>
 
     <main>
-      <h1>I'm a Product Designer based in Kuala Lumpur, working at <a href="https://moneylion.com">MoneyLion</a>. Not available for work. Previously at <a href="https://coinweb.io">Coinweb</a>.</h1>
+      <h1>I'm a producer &amp; digital designer based in Bangkok. Available for work. Previously at <a href="https://moneylion.com">MoneyLion</a> and <a href="https://coinweb.io">Coinweb</a>.</h1>
     
       <div class="resume">
-        <div class="position">
-          <div>
-            <span>MoneyLion<small>Nov '22&mdash;Present</small></span>
-          </div>
-          <div>
-            <span>Lead Product Designer</span>
-          </div>
-        </div>
 
         <div class="position">
           <div>
@@ -218,6 +210,15 @@
               <li>Rights Management Services</li>
               <li>TripTaro</li>
             </ul>
+          </div>
+        </div>
+        
+        <div class="position">
+          <div>
+            <span>MoneyLion<small>Nov '22&mdash;May '23</small></span>
+          </div>
+          <div>
+            <span>Lead Product Designer</span>
           </div>
         </div>
 
