--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
             <span>Freelancer / Consultant</span>
             <ul>
               <li>Storytel</li>
+              <li>Haypp Group</li>
               <li><a target="_blank" href="https://phyron.com">Phyron<span></span></a></li>
               <li><a target="_blank" href="https://allabrf.se">ABRF<span></span></a></li>
               <li>Rights Management Services</li>
