--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
           <div>
             <span>Freelancer / Consultant</span>
             <ul>
+              <li><a target="_blank" href="https://vinoteket.se">Vinoteket<span></span></a></li>
               <li>Storytel</li>
               <li>Haypp Group</li>
               <li><a target="_blank" href="https://phyron.com">Phyron<span></span></a></li>
@@ -339,14 +340,13 @@
       <nav>
         <ul>
           <li><a href="https://linkedin.com/in/staffanestberg">LinkedIn</a></li>
-          <li><a href="https://www.behance.net/staffanestberg">Behance</a></li>
-          <li><a href="https://dribbble.com/staffanestberg">Dribbble</a></li>
+          <li><a href="https://x.com/staffanestberg">X</a></li>
         </ul>
 
         <ul>
-          <li><a target="_self" href="mailto:hello@staffanestberg.com">hello@staffanestberg.com</a></li>
-          <li><a target="_self" href="tel:+46706246344">+66 945 739 658</a></li>
-          <li><a href="cv-staffan-estberg.pdf">Resume<span></span></a></li>
+          <li><a target="_self" href="mailto:info@staffanestberg.com">info@staffanestberg.com</a></li>
+          <li><a target="_self" href="tel:+46706246344">+46 735 823 391</a></li>
+          <li><a href="resume-2024.pdf">Resume<span></span></a></li>
         </ul>
       </nav>
     </footer>
