--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     </header>
 
     <main>
-      <h1>I'm a producer &amp; digital designer based in <s>Bangkok</s> Stockholm. Available for work. Previously at <a href="https://moneylion.com">MoneyLion</a> and <a href="https://coinweb.io">Coinweb</a>.</h1>
+      <h1>I'm a designer &amp; developer based in <s>Bangkok</s> Stockholm. Available for work. Previously at <a href="https://moneylion.com">MoneyLion</a> and <a href="https://coinweb.io">Coinweb</a>.</h1>
     
       <div class="resume">
 
